...
                                            <constraint firstAttribute="height" constant="40" id="s2z-Mw-rW6"/>
                                        </constraints>
                                        <state key="normal" title="Brush" image="Brush"/>
                                        <connections>
                                            <action selector="shapeSelected:" destination="BYZ-38-t0r" eventType="touchUpInside" id="eUt-RV-WKc"/>
...
                                            <constraint firstAttribute="width" constant="40" id="qwj-px-O3y"/>
                                        </constraints>
                                        <state key="normal" title="Line" image="Line"/>
                                        <connections>
                                            <action selector="shapeSelected:" destination="BYZ-38-t0r" eventType="touchUpInside" id="UQX-5s-JJX"/>
...
                                            <constraint firstAttribute="width" constant="40" id="kfg-9w-Tsa"/>
                                        </constraints>
                                        <state key="normal" title="Oval" image="Oval"/>
                                        <connections>
                                            <action selector="shapeSelected:" destination="BYZ-38-t0r" eventType="touchUpInside" id="sxi-FP-XAV"/>
...
                                            <constraint firstAttribute="width" constant="40" id="WeC-EX-4sW"/>
                                        </constraints>
                                        <state key="normal" title="Square" image="Square"/>
                                        <connections>
                                            <action selector="shapeSelected:" destination="BYZ-38-t0r" eventType="touchUpInside" id="crM-bJ-Ddi"/>
...
                                            <constraint firstAttribute="width" constant="40" id="cgT-Rs-pHy"/>
                                        </constraints>
                                        <state key="normal" title="Rectangle" image="Rectangle"/>
                                        <connections>
                                            <action selector="shapeSelected:" destination="BYZ-38-t0r" eventType="touchUpInside" id="wEf-hg-U8F"/>
...
                                            <constraint firstAttribute="width" constant="40" id="dwz-1e-cOy"/>
                                        </constraints>
                                        <state key="normal" title="Triangle" image="Triangle"/>
                                        <connections>
                                            <action selector="shapeSelected:" destination="BYZ-38-t0r" eventType="touchUpInside" id="pHL-nV-9BZ"/>
...
                        </leftBarButtonItems>
                        <rightBarButtonItems>
                            <barButtonItem title="Options" id="han-qv-zDU">
                                <connections>
                                    <segue destination="jXQ-Tw-frm" kind="show" identifier="showOptionsSegue" id="8TA-Ia-1TO"/>
                                </connections>
                            </barButtonItem>
                            <barButtonItem title="Log In" id="Nag-dQ-MeX">
                                <connections>
                                    <segue destination="eSG-W9-pdz" kind="show" identifier="showLoginView" id="3rt-g4-4QT"/>
...
        <scene sceneID="EpI-7c-WjK">
            <objects>
                <viewController id="eSG-W9-pdz" userLabel="Login" customClass="LoginViewController" customModule="Mrror" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="Yzl-fb-Kaf"/>
...
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                <state key="normal" title="Register"/>
                                <connections>
                                    <segue destination="kdn-Gy-VUp" kind="show" identifier="showRegistrationView" id="Dtg-bf-ZQQ"/>
                                </connections>
                            </button>
                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Kyh-ye-OWk">
                                <rect key="frame" x="20" y="306" width="374" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ja4-RT-0oF">
                                <rect key="frame" x="20" y="241" width="374" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Select a Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="oEU-cH-4OF">
                                <rect key="frame" x="20" y="163" width="374" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                <textInputTraits key="textInputTraits" autocorrectionType="no"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ceg-bR-QOb">
                                <rect key="frame" x="20" y="226" width="374" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Select Occupation" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="IvP-cE-ITY">
                                <rect key="frame" x="20" y="283" width="374" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                <textInputTraits key="textInputTraits"/>
                            </textField>
