...
            alert.addAction(kay)
            present(alert, animated: true, completion: nil)
            
            // Segue back to Canvas.
        } else {
            let alert = UIAlertController(title: "😖\nWrong username", message: "and/or password.", preferredStyle: .alert)
            let kay = UIAlertAction(title: "OK", style: .default, handler: nil)
            alert.addAction(kay)
            present(alert, animated: true, completion: nil)
            return
        }
    }
    
...
